Version 8.8.2
* [DXFC-400] Fixed a bug with passing a UNICODE path to a file as a parameter of the logging initialization and settings loading function.
 - For the changes to work reliably, you need to set the default encoding to UTF-8, for example, as indicated by the link: 
 https://www.delftstack.com/howto/powershell/powershell-utf-8-encoding-chcp-65001/#change-system-locale-to-use-utf-8-encoding-in-windows-powershell
 or https://learn.microsoft.com/en-us/answers/questions/587680/where-can-i-find-beta-use-unicode-utf-8-for-worldw

Version 8.8.1
* [DXFC-398] Fixed a defect with incorrect serialization of negative numbers (for example, "prices" of indices)
  transmitted via the QD protocol.

Version 8.8.0
* [DXFC-396] Added the ability to not shuffle resolved IP addresses.
  - Added the `connectOrder` property of an address with possible values: `shuffle`, `random`, `ordered`, `priority`
  - The `shuffle` strategy: Example: `host1:port1,host2:port2,host3:port3[connectOrder=shuffle]` It will shuffle the
    resolved IP addresses, and it will go through them to the end, and then it will resolve and shuffle and so on.
  - The `random` strategy: Example: `host1:port1,host2:port2,host3:port3[connectOrder=random]` It will shuffle IP
    addresses, if the connection is successful, it will reset the state and will shuffle on the next connection after resolve, and so on.
  - The `ordered` strategy: Example: `host1:port1,host2:port2,host3:port3[connectOrder=ordered]` It will NOT shuffle the
    resolved IP addresses, and it will go through them to the end, and then it will resolve and NOT shuffle and so on.
  - The `priority` strategy: Example: `host1:port1,host2:port2,host3:port3[connectOrder=priority]` It will NOT shuffle IP
    addresses, if the connection is successful, it will reset the state and will NOT shuffle on the next connection after resolve, and so on.
  - The default strategy is `shuffle`